--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -18,4 +18,7 @@ $color-link-hover: #fdd835 !default;
 $color-content-table-bd: #2c2c2c !default;
 $color-content-table-bg: #2c2c2c !default;
 
+$color-content-bg: rgba(65,100,117,0.4) !default;
+$color-content-bg-hover: rgba(65,100,117,0.8) !default;
+
 $color-footer: rgba(0, 0, 0, 0.65) !default;
